# wh-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  client_example.py  docker-compose.yml  pyproject.toml
.github/: WORMHOLE_ARCHITECTURE.md  copilot-instructions.md
agent/: client_example.py
deployments/: docker-compose.dev.yml
server/: .env.tunel.example  Dockerfile  Dockerfile.tunnel  pyproject.toml
server/src/: __init__.py
server/src/shared/: __init__.py  config.py  logging.py  models.py
server/src/tunnel_service/: __init__.py  handlers.py  middleware.py  nats_client.py  server.py  tunnel_manager.py
server/src/tunnel_service/tunnel/: base_transport.py
server/src/tunnel_service/tunnel/nats/: client.py  transport.py
server/src/ws_service/: __init__.py
src/: __init__.py  config.py  handlers.py  middleware.py  server.py  tunnel_manager.py
src/templates/: index.html
