[project]
name = "wormhole-server"
version = "0.1.0"
description = "HTTP tunneling service"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "aiohttp-cors==0.8.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.3",
    "watchdog==6.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.14.3",
    "watchdog==6.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`) codes by default.
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"
