[project]
name = "wormhole-server"
version = "0.1.0"
description = "HTTP tunneling service"
requires-python = ">=3.13"

dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "nats-py>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.3",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
